--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
         </nav>
         
         <section id="home">
-            <img src="me.jpg" alt="me" class="me" style="width:200px; height: 210px">
-            <h1>Hi...I'm Veronica!</h1>
+            <div class="topcontainer">
+                <div class="meimage">
+                    <img src="me.jpg" alt="me" class="me" style="width:200px; height: 210px">
+                </div>
+                <div class="metext">
+                    <h1>Hi...I'm Veronica!</h1>
+                </div>
+            </div>
             <p>I love cats!</p>
         </section>
 
@@ -53,6 +59,7 @@
         <section id="contact">
             <h2>Contact Me!</h2>
             <p><a href="mailto: veronicanguyen78@gmail.com"  style="font-size:15px;">veronicanguyen78@gmail.com</a></p>
+
 
             
         </section>
