add intro typing effect

--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
                     <img src="me.jpg" alt="me" class="me" style="width:200px; height: 210px">
                 </div>
                 <div class="metext">
-                    <h1>Hi...I'm Veronica!</h1>
+                    <p class="anitext">Hi...I'm Veronica!</p>
                 </div>
             </div>
-            <p>I love cats!</p>
         </section>
 
 
@@ -59,7 +58,7 @@
         <section id="contact">
             <h2>Contact Me!</h2>
             <p><a href="mailto: veronicanguyen78@gmail.com"  style="font-size:15px;">veronicanguyen78@gmail.com</a></p>
-
+            
 
             
         </section>
