mobile responsiveness features

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <!-- Education Section -->
         <section id="education">
             <h2>EDUCATION</h2>
-            <img src="csulb logo.png" alt="csulb logo" class="csulb" style="width:100px; height:100px">
+            <img src="csulb logo.png" alt="csulb logo" class="csulb">
             <p>California State University, Long Beach</p>
             <p>Computer Science Major | GPA: 3.7</p>
             <p>Expected Graduation: December 2024</p>
@@ -135,7 +135,8 @@
                         <p><b>Personal Website</b></p>
                         <img src="computer.png" alt="computer" class="computer-image">
                         <p class="projects-text">I coded this website using mostly <b>HTML/CSS</b> and a little bit of Javascript.
-                        I also drew some of these images myself!</p>
+                            I also drew some of these images myself!<br><a href="https://github.com/veronicangn/personal-website">Repo</a>
+                        </p>
                     </div>
 
                 </div>
