updated contact section

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <p><b>Personal Website</b></p>
                         <img src="computer.png" alt="computer" class="computer-image">
                         <p class="projects-text">I coded this website using mostly <b>HTML/CSS</b> and a little bit of Javascript.
-                            I also drew some of these images myself!<br><a href="https://github.com/veronicangn/personal-website">Repo</a>
+                            I also drew some of these images myself!<br><a class="repo-text" href="https://github.com/veronicangn/personal-website">Repo Link</a>
                         </p>
                     </div>
 
@@ -162,10 +162,14 @@
         <!-- Contact Section -->
         <section id="contact">
             <h2>Contact Me!</h2>
-            <p><a href="mailto: veronicanguyen78@gmail.com"  style="font-family: Jost; font-size:17px;">veronicanguyen78@gmail.com</a></p>
-            <div class="logoscontainer">
-                <a href="https://www.instagram.com/veroonicanguyen/"><img src="insta logo.png" alt="insta logo" class="logo" style="width:50px; height:50px"></a>
-                <a href="https://www.linkedin.com/in/veronica-nguyen1"><img src="linkedin logo.png" alt="linkedin logo" class ="logo" style="width:37px; height:37px"></a>
+            <div class="contact-section">
+                <a class="socials-text" href="mailto: veronicanguyen78@gmail.com">Email</a>
+                <p class="interpunct"> · </p> 
+                <a class="socials-text" href="https://www.instagram.com/veroonicanguyen/">Instagram</a>
+                <p class="interpunct"> · </p>
+                <a class="socials-text" href="https://www.linkedin.com/in/veronica-nguyen1">Linkedin</a>
+                <p class="interpunct"> · </p>
+                <a class="socials-text" href="https://github.com/veronicangn">Github</a>
             </div>
         </section>
 
