updated projects design

--- a/index.html
+++ b/index.html
@@ -129,34 +129,40 @@
         <!-- Projects Section -->
         <section id="projects">
             <h2>PROJECTS</h2>
-            <div class="projects-row">
-                <div class="projects-column">
-                    <div class="projects-container">
-                        <p><b>Personal Website</b></p>
-                        <img src="computer.png" alt="computer" class="computer-image">
-                        <p class="projects-text">I coded this website using mostly <b>HTML/CSS</b> and a little bit of Javascript.
-                            I also drew some of these images myself!<br><a class="repo-text" href="https://github.com/veronicangn/personal-website">Repo Link</a>
-                        </p>
-                    </div>
-
-                </div>
-                <div class="projects-column">
-                    <div class="projects-container">
-                        <p><b>Population Data Estimations</b></p>
-                        <img src="histogram.png" alt="histogram" class="histogram-image">
-                        <p class="projects-text">Drew random samples from population to analyze population mean and standard deviation. 
-                            Implemented using <b>Python</b> and <b>Matplotlib</b>.
-                        </p>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <p><b>Portfolio Website</b></p>
+                    <img src="computer.png" alt="computer" class="computer-image">
+                    <div class="overlay">
+                        <div class="projects-text">
+                            I coded this website using mostly <b>HTML/CSS</b> and a little bit of Javascript!
+                            <br><a class="repo-text" href="https://github.com/veronicangn/personal-website">Repo Link</a> 
+                        </div>
                     </div>
                 </div>
-                <div class="projects-column">
-                    <div class="projects-container">
-                        <p><b>Fibonacci Solitaire</b></p>
-                        <img src="cards.png" alt="cards" class="cards-image">
-                        <p class="projects-text">Card Game combining Solitaire and Fibonacci numbers. Implemented in <b>C++</b>.</p>
+                <div class="grid-item">
+                    <p><b>Random Fact Generator</b></p>
+                    <img src="fun fact image.jpg" alt="fact gen" class="fact-gen-image">
+                    <div class="overlay">
+                        <div class="projects-text">
+                            Generates a random fact. Implemented with <b>HTML/CSS</b>, <b>Javascript</b>, 
+                            and a random fact <b>API</b>.
+                            <br><a class="repo-text" href="https://github.com/veronicangn/fact-generator">Repo Link</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <p><b>Placeholder</b></p>
+                    <img src="fun fact image.jpg" alt="fact gen" class="fact-gen-image">
+                    <div class="overlay">
+                        <div class="projects-text">
+                            placeholder
+                            <br><a class="repo-text" href="">Repo Link</a>
+                        </div>
                     </div>
                 </div>
             </div>
+            
         </section>
         
         <!-- Contact Section -->
