--- a/index.html
+++ b/index.html
@@ -162,6 +162,16 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="grid-item">
+                            <p><b>Placeholder</b></p>
+                            <img src="fun fact image.jpg" alt="fact gen" class="fact-gen-image">
+                            <div class="overlay">
+                                <div class="projects-text">
+                                    placeholder
+                                    <br><a class="repo-text" href="">Repo Link</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
                 
