--- a/index.html
+++ b/index.html
@@ -145,20 +145,9 @@
                             <p><b>Random Fact Generator</b></p>
                             <img src="fun fact image.jpg" alt="fact gen" class="fact-gen-image">
                             <div class="overlay">
-                                <div class="projects-text">
-                                    Generates a random fact. Implemented with <b>HTML/CSS</b>, <b>Javascript</b>, 
+                                <div class="projects-text">Generates a random fact. Implemented with <b>HTML/CSS</b>, <b>Javascript</b>, 
                                     and a random fact <b>API</b>.
                                     <br><a class="repo-text" href="https://github.com/veronicangn/fact-generator">Repo Link</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="grid-item">
-                            <p><b>Placeholder</b></p>
-                            <img src="fun fact image.jpg" alt="fact gen" class="fact-gen-image">
-                            <div class="overlay">
-                                <div class="projects-text">
-                                    placeholder
-                                    <br><a class="repo-text" href="">Repo Link</a>
                                 </div>
                             </div>
                         </div>
