updated styles & mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
                             <p><b>Random Fact Generator</b></p>
                             <img src="fun fact image.jpg" alt="fact gen" class="fact-gen-image">
                             <div class="overlay">
-                                <div class="projects-text">
-                                    Generates a random fact. Implemented with <b>HTML/CSS</b>, <b>Javascript</b>, 
+                                <div class="projects-text">Generates a random fact. Implemented with <b>HTML/CSS</b>, <b>Javascript</b>, 
                                     and a random fact <b>API</b>.
                                     <br><a class="repo-text" href="https://github.com/veronicangn/fact-generator">Repo Link</a>
                                 </div>
