--- a/index.html
+++ b/index.html
@@ -48,15 +48,11 @@
                     <div class="about-me-container">
                         <p style="font-size: 18px; text-align: left;">Hello, nice to meet you!
                             <br><br>
-                            I'm someone who is passionate about computer science and loves to learn about new things! I'm interested in becoming a software 
-                            developer and also have special interests in web development and artificial intelligence. I love that I can show my creative
-                            side through web development since I have always been interested in art.
+                            I'm someone who is passionate about computer science and loves to learn about new things! I'm currently interested in 
+                            becoming a software developer and also have special interests in web development and cybersecurity.
                             <br><br>
-                            In my free time, I like to spend time with my friends and family. I also like to draw and have taken several drawing and painting
-                            classes in the past.
-                            <br><br>
-                            I took my first computer science course in my junior year of high school, and I was instantly hooked. One of my favorite
-                            projects we did was a personal website using basic HTML and CSS.
+                            In my free time, I like to spend time with my friends and family. Some of my other hobbies include 
+                            traveling and watching shows and movies.
                             <br><br>
                             Now, I'm currently a junior working towards my Bachelor's Degree in Computer Science at CSULB. I have gained a lot of knowledge
                             in my courses and although I have much more to explore, I'm always eager to learn more! I hope I can utilize my skills and knowledge
@@ -91,6 +87,8 @@
                                     <li>Operating Systems</li>
                                     <li>Probability & Statistics</li>
                                     <li>Digital Logic</li>
+                                    <li>Software Development w/ Frameworks (In progress)</li>
+                                    <li>Machine Learning (In progress)</li>
                                 </ul>
                             </div>
                         </div>
@@ -115,11 +113,13 @@
                             
                                 <!--Technologies List-->
                                 <div class="second-column">
-                                    <p style="font-family: Jost; text-decoration: underline;">Technologies:</p>
+                                    <p style="font-family: Jost; text-decoration: underline;">Tools & Operating Systems:</p>
                                     <ul class="list">
-                                        <li>Linux</li>
                                         <li>Jupyter Notebook</li>
                                         <li>Matplotlib</li>
+                                        <li>Github</li>
+                                        <li>Linux</li>
+                                        <li>Windows</li>
                                     </ul>
                                 </div>
                             </div>
