Update projects section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
                     <div class="about-me-container">
                         <p style="font-size: 18px; text-align: left;">Hello, nice to meet you!
                             <br><br>
-                            hi!!!!!!!!!
                             I'm someone who is passionate about computer science and loves to learn about new things! I'm currently interested in 
                             becoming a software developer and also have special interests in web development and cybersecurity.
                             <br><br>
@@ -152,13 +151,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="grid-item">
-                            <p><b>Placeholder</b></p>
-                            <img src="fun fact image.jpg" alt="fact gen" class="fact-gen-image">
+                        <div class="grid-item" style="padding: 10px">
+                            <p><b>Youtube Video Downloader</b></p>
+                            <img src="youtube vid.jpg" alt="youtube" class="youtube-image">
                             <div class="overlay">
-                                <div class="projects-text">
-                                    placeholder
-                                    <br><a class="repo-text" href="">Repo Link</a>
+                                <div class="projects-text">Downloads a Youtube video with its link. Implemented in <b>Python</b>
+                                    using the <b>Tkinter</b> GUI library.
+                                    <br><a class="repo-text" href="https://github.com/veronicangn/youtube-video-downloader">Repo Link</a>
                                 </div>
                             </div>
                         </div>
