Update education section

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Veronica Nguyen</title>
         <link rel="stylesheet" href = "styles.css">
         <link rel="stylesheet" href = "https://fonts.googleapis.com/css?family=Jost">
         <link rel="stylesheet" href = "https://fonts.googleapis.com/css?family=Nunito">
@@ -66,7 +67,7 @@
                     <h2>EDUCATION</h2>
                     <img src="csulb logo.png" alt="csulb logo" class="csulb">
                     <p>California State University, Long Beach</p>
-                    <p>Computer Science Major | GPA: 3.7</p>
+                    <p>Computer Science Major | GPA: 3.8</p>
                     <p>Expected Graduation: December 2024</p>
                 
                     
@@ -106,6 +107,7 @@
                                         <li>C++</li>
                                         <li>C</li>
                                         <li>HTML/CSS</li>
+                                        <li>Javascript</li>
                                         <li>SQL</li>
                                         <li>MongoDB</li>
                                     </ul>
