update projects & education sections

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <h2>EDUCATION</h2>
                     <img src="csulb logo.png" alt="csulb logo" class="csulb">
                     <p>California State University, Long Beach</p>
-                    <p>Computer Science Major | GPA: 3.8</p>
+                    <p>Computer Science Major | GPA: 3.7</p>
                     <p>Expected Graduation: December 2024</p>
                 
                     
@@ -88,8 +88,8 @@
                                     <li>Operating Systems</li>
                                     <li>Probability & Statistics</li>
                                     <li>Digital Logic</li>
-                                    <li>Software Development w/ Frameworks (In progress)</li>
-                                    <li>Machine Learning (In progress)</li>
+                                    <li>Software Development w/ Frameworks</li>
+                                    <li>Machine Learning</li>
                                 </ul>
                             </div>
                         </div>
@@ -139,7 +139,7 @@
                             <div class="overlay">
                                 <div class="projects-text">
                                     I coded this website using mostly <b>HTML/CSS</b> and a little bit of Javascript!
-                                    <br><a class="repo-text" href="https://github.com/veronicangn/personal-website">Repo Link</a> 
+                                    <br><a class="repo-text" href="https://github.com/veronicangn/personal-website" target="_blank">Repo Link</a> 
                                 </div>
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                             <div class="overlay">
                                 <div class="projects-text">Generates a random fact. Implemented with <b>HTML/CSS</b>, <b>Javascript</b>, 
                                     and a random fact <b>API</b>.
-                                    <br><a class="repo-text" href="https://github.com/veronicangn/fact-generator">Repo Link</a>
+                                    <br><a class="repo-text" href="https://github.com/veronicangn/fact-generator" target="_blank">Repo Link</a>
                                 </div>
                             </div>
                         </div>
@@ -159,7 +159,20 @@
                             <div class="overlay">
                                 <div class="projects-text">Downloads a Youtube video with its link. Implemented in <b>Python</b>
                                     using the <b>Tkinter</b> GUI library.
-                                    <br><a class="repo-text" href="https://github.com/veronicangn/youtube-video-downloader">Repo Link</a>
+                                    <br><a class="repo-text" href="https://github.com/veronicangn/youtube-video-downloader" target="_blank">Repo Link</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="grid-item" style="padding: 10px">
+                            <p><b>Mindful Memoir</b></p>
+                            <img src="journaling.png" alt="journaling" class="journaling-image">
+                            <div class="overlay">
+                                <div class="projects-text">Journaling website with randomized prompts and wellness videos. 
+                                    Collaborated with two members in hackathon.
+                                    Implemented in <b>HTML</b>, <b>CSS</b>, and <b>Javascript</b>.
+                                    <br><a class="repo-text" href="https://github.com/veronicangn/Mindful-Memoir" target="_blank">Repo Link</a>
+                                    ·
+                                    <a class="repo-text" href="https://veronicangn.github.io/Mindful-Memoir/" target="_blank">Try it Out!</a>
                                 </div>
                             </div>
                         </div>
