Updated projects section

--- a/index.html
+++ b/index.html
@@ -174,31 +174,30 @@
                     <div class="grid-container">
                         <div class="grid-item">
                             <p><b>Portfolio Website</b></p>
-                            <img src="computer.png" alt="computer" class="computer-image">
+                            <img src="computer.jpg" alt="computer" class="computer-image">
                             <div class="overlay">
                                 <div class="projects-text">
-                                    I coded this website using mostly <b>HTML/CSS</b> and a little bit of Javascript!
+                                    I coded this website using mostly <b>HTML</b> and <b>CSS</b>!
                                     <br><a class="repo-text" href="https://github.com/veronicangn/personal-website" target="_blank">Repo Link</a> 
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item">
-                            <p><b>Random Fact Generator</b></p>
-                            <img src="fun fact image.jpg" alt="fact gen" class="fact-gen-image">
+                            <p><b>Book Nook</b></p>
+                            <img src="books.jpg" alt="books" class="books-image">
                             <div class="overlay">
-                                <div class="projects-text">Generates a random fact. Implemented with <b>HTML/CSS</b>, <b>Javascript</b>, 
-                                    and a random fact <b>API</b>.
-                                    <br><a class="repo-text" href="https://github.com/veronicangn/fact-generator" target="_blank">Repo Link</a>
+                                <div class="projects-text">Android app to rate books, make friends, and join book communities. Implemented with <b>Kotlin</b> and <b>Android Studio</b>.
+                                    <br><a class="repo-text" href="https://github.com/ittybittyfishy/Bookit" target="_blank">Repo Link</a>
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item" style="padding: 10px">
-                            <p><b>Youtube Video Downloader</b></p>
-                            <img src="youtube vid.jpg" alt="youtube" class="youtube-image">
+                            <p><b>Predicting Rain in Australia</b></p>
+                            <img src="rain.png" alt="rain" class="rain-image">
                             <div class="overlay">
-                                <div class="projects-text">Downloads a Youtube video with its link. Implemented in <b>Python</b>
-                                    using the <b>Tkinter</b> GUI library.
-                                    <br><a class="repo-text" href="https://github.com/veronicangn/youtube-video-downloader" target="_blank">Repo Link</a>
+                                <div class="projects-text">Machine learning models using <b>Python</b>,
+                                    <b>scikit-learn</b>, and <b>Jupyter Notebook</b> to predict next-day rainfall in Australia.
+                                    <br><a class="repo-text" href="https://github.com/veronicangn/Predicting-Rain-In-Australia" target="_blank">Repo Link</a>
                                 </div>
                             </div>
                         </div>
