Edit skills section

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             
                                 <!--Technologies List-->
                                 <div class="second-column" style="margin-top: -20px">
-                                    <p style="font-family: Jost; text-decoration: underline;">Frameworks, Libraries, & Databases:</p>
+                                    <p style="font-family: Jost; text-decoration: underline;">Frameworks, Databases & Technologies:</p>
                                     <ul class="list" style="margin-top: 0">
                                         <li>.NET</li>
                                         <li>Angular</li>
@@ -158,9 +158,9 @@
                                         <li>Azure DevOps</li>
                                         <li>Android Studio</li>
                                         <li>Postman</li>
+                                        <li>SSMS</li>
                                         <li>Firebase</li>
                                         <li>MongoDB</li>
-                                        <li>Firebase</li>
                                     </ul>
                                 </div>
                             </div>
